# sidecar

./: .gitignore  Cargo.toml  HOW_TO_CONTRIBUTE.md  README.md  build.rs  codestory.db  package.sh  package_windows.sh  package_windows_bin.sh  package_windows_zip.sh  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  idea.yml
.github/workflows/: sidecar-linux-arm64.yaml  sidecar-linux.yaml  sidecar-mac.yaml  sidecar-windows.yaml  stable.yaml
.sqlx/: query-17745011d4c2595e568489e0e75ba0761a314f01717bf4bc9246567c632447f2.json  query-31d431bd533fa306b9dd8292f7d5f0773f64f4d0aa47fadfb6f99e3e8a7aee5f.json  query-5c39ab4482d0ce0c04312b003c17d45cea578243b5f3fb508ad8755816e6d160.json  query-aea9f23f59f07971ec443979330c8433c195047e347999bc8db1f27736e88de0.json  query-b12a3e2371d795a564fb2165a75a3abceedc24d0b1c7667861a9a8e76c1ada00.json  query-e4cf25e96c7d33f2402e8f49b5f5d573ff70b32f051225340e7afa1336da11ca.json  query-f43f43074aa6d4578b77bf3d578c7d39f281f15eba9048425ccbf9de5cccd59b.json
dataset/: swe_bench_lite.jsonl
difftastic/: Cargo.toml  build.rs
difftastic/src/: lib.rs  options.rs
difftastic/src/display/: side_by_side.rs  style.rs
huggingface/swe_bench/: README.md
huggingface/swe_bench/data/: dev-00000-of-00001.parquet  test-00000-of-00001.parquet
llm_client/: Cargo.toml  ai.codestory.llm_client.db
llm_client/src/: broker.rs  lib.rs  provider.rs
llm_client/src/answer_model/: mod.rs
llm_client/src/clients/: anthropic.rs  codestory.rs  fireworks.rs  gemini_pro.rs  google_ai.rs  groq.rs  mod.rs  ollama.rs  open_router.rs  openai.rs  openai_compatible.rs  togetherai.rs  types.rs
llm_client/src/format/: llama70b.rs  mistral.rs  mixtral.rs  mod.rs  types.rs
llm_client/src/reporting/: posthog.rs
llm_client/src/tokenizer/: tokenizer.rs
llm_prompts/: Cargo.toml
llm_prompts/src/: lib.rs
llm_prompts/src/answer_model/: mod.rs
llm_prompts/src/fim/: claude.rs  codellama.rs  deepseek.rs  mod.rs  types.rs
llm_prompts/src/in_line_edit/: anthropic.rs  broker.rs  codellama.rs  deepseekcoder.rs  mistral.rs  mod.rs  openai.rs  types.rs
llm_prompts/src/reranking/: broker.rs  codellama.rs  mistral.rs  mod.rs  openai.rs  types.rs
logging/: Cargo.toml
logging/src/: lib.rs  parea.rs
migrations/: 20231009130619_agent_conversation_message.sql  20231016135924_git_log_statistics.sql  20231020124102_agent_conversation_column_for_repo.sql  20231020164104_agent_conversation_column_generated_answer_context.sql
sidecar/: Cargo.toml  build.rs  codestory.db
sidecar/.sqlx/: query-28c3dd8900e6261140eb31ff7e08c5ae885eaa761d9fad64986127fcc822f6c0.json  query-402b4dec4e910feace5f1f04450aa34158ace127b0fb79ca8aa60ee431f94c8c.json  query-5a348e3268533424a775feb01b21f474d1b420aadb30bb245ff5e864816b1e18.json  query-b45225043caa8f7658478efccfba17ffadbf4f3b4c7f23bc5eaa638192ba4698.json
sidecar/src/: lib.rs
sidecar/src/agent/: llm_funcs.rs  model.rs  prompts.rs  search.rs  types.rs  user_context.rs
sidecar/src/agentic/: mod.rs
sidecar/src/application/: application.rs  background.rs
sidecar/src/bg_poll/: background_polling.rs
sidecar/src/chunking/: editor_parsing.rs  file_content.rs  go.rs  helpers.rs  javascript.rs  languages.rs  mod.rs  navigation.rs  python.rs  refdef.rs  rust.rs  scope_graph.rs  text_document.rs  tree_sitter_file.rs  types.rs  typescript.rs
sidecar/src/git/: commit_statistics.rs
sidecar/src/in_line_agent/: context_parsing.rs  prompts.rs  types.rs
sidecar/src/indexes/: code_snippet.rs  file.rs  indexer.rs  schema.rs
sidecar/src/inline_completion/: helpers.rs  mod.rs  state.rs  symbols_tracker.rs  types.rs
sidecar/src/llm/: mod.rs  provider.rs  types.rs
sidecar/src/mcts/: action_node.rs  mod.rs
sidecar/src/posthog/: client.rs
sidecar/src/repo/: filesystem.rs  iterator.rs  state.rs  types.rs
sidecar/src/repomap/: analyser.rs  error.rs  files.rs  graph.rs  helpers.rs  mod.rs  tag.rs  tree_context.rs  tree_printer.rs  tree_walker.rs  types.rs
src/: embedder.rs  git.rs  lib.rs  main.rs  tantivy.rs
src/agent/: llm_funcs.rs  mod.rs  model.rs  prompts.rs  search.rs  types.rs  user_context.rs
src/application/: application.rs  background.rs  mod.rs
src/bg_poll/: background_polling.rs  mod.rs
src/chunking/: documentation_parsing.rs  editor_parsing.rs  javascript.rs  languages.rs  mod.rs  python.rs  rust.rs  text_document.rs  types.rs  typescript.rs
src/db/: sqlite.rs
src/embedder/: embedder.rs
src/git/: commit_statistics.rs
src/in_line_agent/: context_parsing.rs  documentation.rs  mod.rs  prompts.rs  types.rs
src/indexes/: caching.rs  code_snippet.rs  file.rs  indexer.rs  mod.rs  query.rs  schema.rs
src/posthog/: client.rs
src/repo/: filesystem.rs  iterator.rs  mod.rs  state.rs  types.rs
src/semantic_search/: QDRANT.yaml  client.rs  mod.rs  payload_helpers.rs  qdrant_process.rs  schema.rs
src/state/: mod.rs
src/webserver/: agent.rs  agent_stream.rs  config.rs  context_trimming.rs  health.rs  in_line_agent.rs  mod.rs  repos.rs  tree_sitter.rs  types.rs
(+221 files in other folders)
