[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dynamic-ort"]
dynamic-ort = ["ort/load-dynamic"]
ee = []

[dependencies]
async-trait = "0.1.73"
ndarray = "0.15.6"
smallvec = { version = "1.11.0", features = ["serde"]}
ort = { git = "https://github.com/bloopai/ort", branch = "env-builder-telemetry" }
tokio = { version = "1.32.0", features = ["full"] }
scc = { version= "1.8.3", features = ["serde"] }
tokenizers = { version = "0.13.3", default-features = false, features = ["progressbar", "cli", "onig", "esaxx_fast"] }
anyhow = "1.0.75"
qdrant-client = "1.5.0"
tantivy = "0.21.0"
thread-priority = "0.13.1"
serde_json = "1.0.107"
serde = "1.0.188"
ignore = "0.4.20"
once_cell = "1.18.0"
regex = "1.9.5"

[build-dependencies]
fs_extra = "1.3.0"
