[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dynamic-ort"]
dynamic-ort = ["ort/load-dynamic"]
ee = []

[dependencies]
async-trait = "0.1.73"
ndarray = "0.15.6"
smallvec = { version = "1.11.0", features = ["serde"]}
ort = { git = "https://github.com/bloopai/ort", branch = "env-builder-telemetry" }
tokio = { version = "1.32.0", features = ["full"] }
scc = { version = "1.8.3", features = ["serde"] }
tokenizers = { version = "0.13.3", default-features = false, features = ["progressbar", "cli", "onig", "esaxx_fast"] }
anyhow = "1.0.75"
qdrant-client = "1.5.0"
tantivy = { version = "0.21.0", features = ["mmap"] }
thread-priority = "0.13.1"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
ignore = "0.4.20"
once_cell = "1.18.0"
regex = "1.9.5"
axum = { version = "0.6.20", features = ["http2", "headers", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-appender = "0.2.2"
directories = "5.0.1"
clap = "4.4.6"
color-eyre = "0.6.2"
erased-serde = "0.3.31"
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["auth", "cors", "catch-panic", "fs"] }
thiserror = "1.0.49"
gix = "0.54.1"
rand = "0.8.5"
flume = "0.11.0"
rayon = "1.8.0"
either = "1.9.0"
async-stream = "0.3.5"
futures = "0.3.28"
sqlx = { version = "0.7.2", features = ["sqlite", "migrate", "runtime-tokio-rustls", "chrono", "uuid"]}
blake3 = "1.5.0"
tree-sitter = "0.20.10"
tree-sitter-typescript = "0.20.1"
tree-sitter-javascript = "0.20.1"
tree-sitter-rust = "0.20.4"
git-version = "0.3.5"
relative-path = "1.9.0"
notify-debouncer-mini = "0.4.1"
pest = "2.7.4"
pest_derive = "2.7.4"
fuzzy-matcher = "0.3.7"
uuid = "1.4.1"
compact_str = "0.7.1"
async-openai = "0.14.3"
reqwest = "0.11.22"
chrono = { version = "0.4.31", features = ["serde"] }
tiktoken-rs = "0.5.4"
rake = "0.3.3"
tokio-stream = "0.1.14"
fancy-regex = "0.11.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.2", default-features = false, features = [ "resource" ] }

[build-dependencies]
fs_extra = "1.3.0"
blake3 = "1.4.0"
