[workspace]
members = [
    "sidecar",
    "difftastic",
    "llm_client",
    "llm_prompts",
    "logging",
]


[profile.release]
lto = "thin"

[patch.crates-io]
# https://github.com/mbrubeck/tree_magic/pull/13 hasn't been merged yet.
tree_magic_mini = { git = 'https://github.com/Wilfred/tree_magic', branch = 'fix-panic-for-empty-strings' }
