[package]
name = "llm_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0"
async-trait = "0.1.77"
anyhow = "1.0.75"
reqwest = { version = "0.11.23", features = ["blocking", "json", "stream"] }
serde = "1.0.195"
serde_json = "1.0.111"
eventsource-stream = "0.2.3"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-appender = "0.2.2"
either = "1.9.0"
thiserror = "1.0.49"
tokenizers = { version = "0.13.3", default-features = false, features = ["progressbar", "cli", "onig", "esaxx_fast"] }
tiktoken-rs = "0.5.4"
async-openai = "0.21.0"
sqlx = { version = "0.7.2", features = ["sqlite", "migrate", "runtime-tokio-rustls", "chrono", "uuid"]}
uuid = { version = "1.4.1", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }

logging = { path = "../logging" }
