[package]
name = "llm_prompts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm_client = { path = "../llm_client" }
thiserror = "1.0.56"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
